# CS_236_Lab2

./: Automaton.cpp  CMakeLists.txt  CommentAutoma.cpp  CommentAutoma.h  EOFAutoma.cpp  EOFAutoma.h  IDAutoma.cpp  IDAutoma.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  Predicate.cpp  Rule.cpp  StringAutoma.cpp  StringAutoma.h  Token.cpp  Token.h  UndefinedAutoma.cpp  UndefinedAutoma.h  UndefinedCommentAutoma.cpp  UndefinedStringAutoma.cpp  lab1  main.cpp  makefile  test.txt  testout.txt
1-100/: answer1.txt  answer2.txt  input1.txt  input2.txt
1-70/: answer1.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  answernoway.txt  input1.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  inputnoway.txt
1-90/: answer2.txt  answer3.txt  input2.txt  input3.txt
lab1.dSYM/Contents/Resources/DWARF/: lab1
